# minesweeper

./: .gitignore  CMakeLists.txt  Casilla.cpp  Casilla.h  ConsoleManager.cpp  ConsoleManager.h  HistorialManager.cpp  HistorialManager.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  JugadorAutomatico.cpp  JugadorAutomatico.h  JugadorHumano.cpp  JugadorHumano.h  README.md  Tablero.cpp  Tablero.h  TimeManager.cpp  TimeManager.h  main.cpp
